Update dependencies (switch to openjson), add module-info
Signed-off-by: Michael Edgar <michael@xlate.io>